Refactored API Spec Schemas
